# Machine_Optimization_Crew

./: .gitignore  README.md  pyproject.toml
Lab_2/: README.md  calculator_tool.py  crew.py  main.py
Lab_2/config/: agents.yaml  tasks.yaml
Lab_2b/: README.md  calculator_tool.py  crew.py  main.py
Lab_2b/config/: tasks.yaml
Lab_2b/input/: allocation_tools.csv
Lab_3/: README.md  calculator_tool.py  crew.py  main.py
Lab_3/config/: agents.yaml  tasks.yaml
Lab_4a/: README.md  main.py  orchestrator.py  tool_selector.py
Lab_4a/config/: agents.yaml  tasks.yaml
Lab_4b/: README.md  main.py  optimization_strategies.md  orchestrator.py  verify_optimality.py
Lab_4b/config/: agents.yaml  tasks.yaml
Lab_5/: README.md  main.py  reporter.py
Lab_5/config/: agents.yaml  tasks.yaml
Lab_5/reports/: optimization_report_20250914_224254.md  optimization_summary_20250914_224254.md
