[project]
name = "machine-optimization-crew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests==2.32.5",
    "crewai==0.102.0",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "python-dotenv==1.1.1",
    "crewai-tools>=0.37.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "notebook>=7.4.5"
    ]
